# Computer-Graphics-Ferris-Wheel-Simulation

./: README.md
Ferriswheel sim/: CMakeLists.txt
Ferriswheel sim/dependencies/glad/: glad.h
Ferriswheel sim/src/: EBO.cpp  Main.cpp  Texture.cpp  VAO.h  default.vert  shaderClass.cpp
src/: Camera.cpp  Camera.h  Mesh.cpp  VBO.h  default.frag  skybox.frag
